@@ -23,6 +23,14 @@ IF(HAVE_GETTIMEOFDAY)
 	ADD_DEFINITIONS(-DAVE_GETTIMEOFDAY)
 ENDIF(HAVE_GETTIMEOFDAY)
 
+CHECK_SYMBOL_EXISTS(BTPROTO_RFCOMM
+	bluetooth/bluetooth.h
+		HAVE_BLUETOOTH)
+IF(HAVE_BLUETOOTH)
+	MESSAGE(STATUS "Enabling bluetooth obdsim port")
+	ADD_DEFINITIONS(-DHAVE_BLUETOOTH)
+ENDIF(HAVE_BLUETOOTH)
+
 SET(OBDSIM_POSIXSRCS
 	posixsimport.cc
 	posixsimport.h
@@ -31,6 +39,11 @@ SET(OBDSIM_POSIXSRCS
 SET(OBDSIM_WINDOWSSRCS
 	windowssimport.cc
 	windowssimport.h
+)
+
+SET(OBDSIM_BLUETOOTHSRCS
+	bluetoothsimport.cc
+	bluetoothsimport.h
 )
 
 SET(OBDSIM_SRCS
@@ -49,6 +62,11 @@ ELSE("${CMAKE_SYSTEM}" MATCHES "Windows")
 	SET(OBDSIM_SRCS ${OBDSIM_SRCS} ${OBDSIM_POSIXSRCS})
 	SET(OBDSIM_LIBS ${OBDSIM_LIBS} pthread dl)
 ENDIF("${CMAKE_SYSTEM}" MATCHES "Windows")
+
+IF(HAVE_BLUETOOTH)
+	SET(OBDSIM_SRCS ${OBDSIM_SRCS} ${OBDSIM_BLUETOOTHSRCS})
+	SET(OBDSIM_LIBS ${OBDSIM_LIBS} bluetooth)
+ENDIF(HAVE_BLUETOOTH)
 
 SET(OBDSIM_LIBS
 	${OBDSIM_LIBS}
